--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ p {
 footer {
   background-color: #333;
   color: #fff;
-  padding: 0;
+  padding:5px;
   text-align: center;
   position: absolute;
   bottom: 0;
