--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Общие стили */
 html, body {
+  font-size: 13px;
   height: 100%; /* Устанавливаем 100% высоту для html и body */
   margin: 0;
   padding: 0;
@@ -7,13 +8,15 @@ html, body {
 
 body {
   display: grid;
-  grid-template-rows: repeat(5, 20%);
+  grid-template-rows: 1fr 5fr;
+  margin: 0;
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  min-height: 100vh; /* Обеспечиваем, что body занимает всю высоту экрана */
 }
 
 header {
+  font-size: 15px;
+  height: 135px;
   background-color: #333;
   color: #fff;
   padding: 1em;
@@ -36,9 +39,48 @@ nav ul li a {
 }
 
 main {
+  display: flex;
   flex: 1; /* Это позволяет main растягиваться и заполнять пространство между header и footer */
+  flex-direction: column;
+  background-color: white;
   padding: 20px;
   text-align: center; /* Центрируем текст на странице */
+}
+
+.hero{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+
+#text1{
+  font-size: 15px;
+}
+
+button{
+  width: 115px;
+  padding: 2px;
+  margin: 15px;
+  font-size: 12px;
+}
+
+article{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  margin: 20px;
+}
+
+.section1, .section2, .section3, .section4{
+  padding: 10px;
+  margin: 20px;
+  border: 1.5px solid black;
+  border-radius: 5%;
+}
+
+#omOss, #våraMål, #lorem1, #lorem2{
+  color: black;
 }
 
 h1, h2 {
@@ -54,18 +96,112 @@ p {
 footer {
   background-color: #333;
   color: #fff;
-  padding:5px;
+  padding: 5px;
   text-align: center;
-  position: absolute;
   bottom: 0;
-  width: 100%;
   flex-shrink: 0; /* Гарантируем, что футер не сожмется и всегда будет внизу */
 }
 
 /* Адаптивные стили */
-@media (min-width: 768px) {
+@media (min-width: 320px) {
+
+  body{
+    font-size: 15px;
+  }
+
   main {
-      max-width: 600px;
-      margin: 0 auto; /* Центрируем контент на больших экранах */
+      flex-direction: column;
+  }
+
+  #p1, #p2, #p3, #p4{
+    font-size: 15px;
+  }
+
+  img{
+    width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+
+  header{
+    font-size: 20px;
+    height: 155px;
+  }
+
+  main{
+    flex-direction: column;
+    font-size: 18px;
+  }
+
+  img{
+    width: 100%;
+  }
+
+  .hero{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  #text1{
+    font-size: 25px;
+    margin-top: 20px;
+  }
+
+  article{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    margin: 20px;
+  }
+
+  #p1, #p2, #p3, #p4{
+    font-size: 20px;
+  }
+
+  button{
+    font-size: 16px;
+    width: 155px;
+    padding: 5px;
+  }
+
+}
+
+@media (min-width: 1024px) {
+
+  header{
+    font-size: 30px;
+    height: 225px;
+  }
+
+  main{
+    flex-direction: column;
+    font-size: 22px;
+  }
+
+  img{
+    width: 100%;
+  }
+
+  #text1{
+    font-size: 30px;
+    margin-top: 30px;
+  }
+  
+  article{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  #p1, #p2, #p3, #p4{
+    font-size: 22px;
+  }
+
+  button{
+    font-size: 22px;
+    width: 200px;
+    padding: 8px;
   }
 }
