--- a/style.css
+++ b/style.css
@@ -1,17 +1,13 @@
-/* Общие стили */
-html, body {
-  font-size: 13px;
-  height: 100%;
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
   margin: 0;
   padding: 0;
 }
 
-body {
-  display: grid;
-  grid-template-rows: 1fr 5fr;
+ul, li, h1, h2, h3, h4 {
   margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  padding: 0;
 }
 
 header {
@@ -43,7 +39,6 @@ main {
   flex: 1;
   flex-direction: column;
   background-color: white;
-  padding: 20px;
   text-align: center;
 }
 
@@ -58,12 +53,6 @@ main {
   font-size: 15px;
 }
 
-button{
-  width: 115px;
-  padding: 2px;
-  margin: 15px;
-  font-size: 12px;
-}
 
 article{
   display: flex;
@@ -83,14 +72,85 @@ article{
   color: black;
 }
 
-h1, h2 {
-  color: white;
-}
-
 p {
   color: #555;
   font-size: 1.1rem;
   margin: 10px 0;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.product-section-title {
+  text-align: center;
+  font-size: 24px;
+  margin: 20px 0 0 0;
+}
+
+.product-item {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  height: 100%;
+  position: relative;
+}
+
+.product-image-container{
+  flex: 0 0 350px;
+  overflow: hidden; 
+  display: flex;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.card-image-link {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.card-image-link > img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.product-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product-title {
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.product-description {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.buy-button {
+ display: block;
+ width: 100%;
+ font-size: 16px;
+ padding: 10px;
+ text-align: center;
+ cursor: pointer;
+ border-radius: 5px;
+ margin-top: auto;
+ background-color: rgb(56, 42, 42);
+ color: white;
 }
 
 footer {
@@ -102,27 +162,8 @@ footer {
   flex-shrink: 0;
 }
 
-
-@media (min-width: 320px) {
-
-  body{
-    font-size: 15px;
-  }
-
-  main {
-      flex-direction: column;
-  }
-
-  #p1, #p2, #p3, #p4{
-    font-size: 15px;
-  }
-
-  img{
-    width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
+/* for tablets */
+@media (min-width: 481px) and (max-width: 1024px) {
 
   header{
     font-size: 20px;
@@ -167,9 +208,23 @@ footer {
     padding: 5px;
   }
 
+  .cards {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
+  .product-title {
+    font-size: 22px;
+  }
+
+  .product-description {
+    font-size: 18px;
+  }
 }
 
-@media (min-width: 1024px) {
+
+/* for desctops */
+@media (min-width: 1025px) {
 
   header{
     font-size: 30px;
@@ -203,5 +258,18 @@ footer {
     font-size: 22px;
     width: 200px;
     padding: 8px;
+  }
+
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+  }
+
+  .product-title {
+    font-size: 24px;
+  }
+
+  .product-description {
+    font-size: 18px;
   }
 }
