--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@
   --header-text: #fff;
 }
 
-/* Общие стили */
 html, body {
   font-size: 13px;
-  height: 100%; /* Устанавливаем 100% высоту для html и body */
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -16,19 +15,20 @@ html, body {
 body {
   display: grid;
   grid-template-rows: 1fr 5fr;
-  margin: 0;
   font-family: Arial, sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
+  margin: 0;
+  padding: 0;
 }
 
 header {
-  font-size: 15px;
-  height: 135px;
-  background-color: var(--header-bg);
-  color: var(--header-text);
-  padding: 1em;
+  font-size: 18px;
+  display: block;
+  background-color: rgb(28, 22, 22);
+  color: white;
   text-align: center;
+  padding: 20px 0;
 }
 
 nav ul {
@@ -42,24 +42,35 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: white;
   text-decoration: none;
 }
 
 main {
   display: flex;
-  flex: 1; /* Это позволяет main растягиваться и заполнять пространство между header и footer */
+  flex: 1;
   flex-direction: column;
   background-color: white;
   padding: 20px;
   text-align: center;
 }
 
-.hero {
+.cover {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  width: auto;
+  min-height: 60vh;
+  overflow: hidden;
+  position: relative;
+}
+
+.cover-image {
+  position: absolute;
+  min-height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 #text1 {
@@ -85,8 +96,8 @@ article {
   margin: 20px;
   border: 1.5px solid black;
   border-radius: 5%;
-  background-color: var(--bg-color); 
-  color: var(--text-color); 
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 #omOss, #våraMål, #lorem1, #lorem2 {
@@ -103,16 +114,129 @@ p {
   margin: 10px 0;
 }
 
+.cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
 footer {
   background-color: #333;
   color: #fff;
   padding: 5px;
   text-align: center;
   bottom: 0;
-  flex-shrink: 0; /* Гарантируем, что футер не сожмется и всегда будет внизу */
+  flex-shrink: 0;
 }
 
-/* TILLÄGG FÖR MÖRKT LÄGE */
+@media (min-width: 481px) and (max-width: 1024px) {
+  header {
+    font-size: 20px;
+  }
+
+  main {
+    flex-direction: column;
+    font-size: 18px;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  .cover {
+    min-height: 70vh;
+  }
+
+  #text1 {
+    font-size: 25px;
+    margin-top: 20px;
+  }
+
+  article {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 20px;
+    margin: 20px;
+  }
+
+  #p1, #p2, #p3, #p4 {
+    font-size: 20px;
+  }
+
+  button {
+    font-size: 16px;
+    width: 155px;
+    padding: 5px;
+  }
+
+  .cards {
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+
+  .product-title {
+    font-size: 22px;
+  }
+
+  .product-description {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 1025px) {
+  header {
+    font-size: 22px;
+  }
+
+  .cover {
+    min-height: 80vh;
+  }
+
+  main {
+    flex-direction: column;
+    font-size: 22px;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  #text1 {
+    font-size: 30px;
+    margin-top: 30px;
+  }
+
+  article {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  #p1, #p2, #p3, #p4 {
+    font-size: 22px;
+  }
+
+  button {
+    font-size: 22px;
+    width: 200px;
+    padding: 8px;
+  }
+
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+  }
+
+  .product-title {
+    font-size: 24px;
+  }
+
+  .product-description {
+    font-size: 18px;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --bg-color: #333;
@@ -155,105 +279,5 @@ footer {
 
   p {
     color: var(--text-color);
-  }
-}
-
-/* Адаптивные стили */
-@media (min-width: 320px) {
-  body {
-    font-size: 15px;
-  }
-
-  main {
-    flex-direction: column;
-  }
-
-  #p1, #p2, #p3, #p4 {
-    font-size: 15px;
-  }
-
-  img {
-    width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  header {
-    font-size: 20px;
-    height: 155px;
-  }
-
-  main {
-    flex-direction: column;
-    font-size: 18px;
-  }
-
-  img {
-    width: 100%;
-  }
-
-  .hero {
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
-
-  #text1 {
-    font-size: 25px;
-    margin-top: 20px;
-  }
-
-  article {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 20px;
-    margin: 20px;
-  }
-
-  #p1, #p2, #p3, #p4 {
-    font-size: 20px;
-  }
-
-  button {
-    font-size: 16px;
-    width: 155px;
-    padding: 5px;
-  }
-}
-
-@media (min-width: 1024px) {
-  header {
-    font-size: 30px;
-    height: 225px;
-  }
-
-  main {
-    flex-direction: column;
-    font-size: 22px;
-  }
-
-  img {
-    width: 100%;
-  }
-
-  #text1 {
-    font-size: 30px;
-    margin-top: 30px;
-  }
-
-  article {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  #p1, #p2, #p3, #p4 {
-    font-size: 22px;
-  }
-
-  button {
-    font-size: 22px;
-    width: 200px;
-    padding: 8px;
   }
 }
