--- a/style.css
+++ b/style.css
@@ -5,19 +5,14 @@
   --header-text: #fff;
 }
 
-html, body {
-  font-size: 13px;
-  height: 100%;
+body {
+  font-family: Arial, sans-serif;
+  background-color: white;
   margin: 0;
   padding: 0;
 }
 
-body {
-  display: grid;
-  grid-template-rows: 1fr 5fr;
-  font-family: Arial, sans-serif;
-  background-color: var(--bg-color);
-  color: var(--text-color);
+ul, li, h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
 }
@@ -42,7 +37,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: white;
   text-decoration: none;
 }
 
@@ -50,8 +45,7 @@ main {
   display: flex;
   flex: 1;
   flex-direction: column;
-  background-color: white;
-  padding: 20px;
+  background-color: var(--bg-color);
   text-align: center;
 }
 
@@ -77,13 +71,6 @@ main {
   font-size: 15px;
 }
 
-button {
-  width: 115px;
-  padding: 2px;
-  margin: 15px;
-  font-size: 12px;
-}
-
 article {
   display: flex;
   flex: 1;
@@ -104,10 +91,6 @@ article {
   color: var(--text-color);
 }
 
-h1, h2 {
-  color: var(--header-text);
-}
-
 p {
   color: var(--text-color);
   font-size: 1.1rem;
@@ -122,16 +105,90 @@ p {
   margin-bottom: 20px;
 }
 
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 5px;
+.product-section-title {
+  text-align: center;
+  font-size: 24px;
+  margin: 20px 0 0 0;
+}
+
+.product-item {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  height: 100%;
+  position: relative;
+}
+
+.product-image-container {
+  flex: 0 0 350px;
+  overflow: hidden;
+  display: flex;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.card-image-link {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.card-image-link > img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.product-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product-title {
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.product-description {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.buy-button {
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-top: auto;
+  background-color: rgb(56, 42, 42);
+  color: white;
+}
+
+.contact-info {
+  margin: 50px;
+  min-height: 100vh;
+}
+
+.site-footer p {
+  background-color: rgb(0, 0, 0);
+  color: white;
   text-align: center;
   bottom: 0;
   flex-shrink: 0;
+  padding: 30px;
 }
 
+/* for tablets */
 @media (min-width: 481px) and (max-width: 1024px) {
+
   header {
     font-size: 20px;
   }
@@ -185,7 +242,9 @@ footer {
   }
 }
 
+/* for desktops */
 @media (min-width: 1025px) {
+
   header {
     font-size: 22px;
   }
@@ -237,6 +296,7 @@ footer {
   }
 }
 
+/* TILLÄGG FÖR MÖRKT LÄGE */
 @media (prefers-color-scheme: dark) {
   :root {
     --bg-color: #333;
@@ -250,13 +310,13 @@ footer {
     color: var(--text-color);
   }
 
-  main {
-    background-color: var(--bg-color);
-  }
-
-  footer {
+  header {
     background-color: var(--header-bg);
     color: var(--header-text);
+  }
+
+  nav ul li a {
+    color: #fff;
   }
 
   .section1, .section2, .section3, .section4 {
@@ -264,17 +324,13 @@ footer {
     color: var(--text-color);
   }
 
-  header {
+  footer {
     background-color: var(--header-bg);
     color: var(--header-text);
   }
 
   #omOss, #våraMål, #lorem1, #lorem2 {
     color: var(--text-color);
-  }
-
-  h1, h2 {
-    color: var(--header-text);
   }
 
   p {
